[package]
name = "tytutor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
gloo-storage = "0.2.2"
gloo-utils = "0.1.6"
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlElement"] }
yew = { version = "0.20.0", features = ["csr"] }
 
[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
